🔐 Update dependencies to fix vulnerabilities (#107)